# mt-jailbench

./: .gitignore  README.md  pyproject.toml  run_benchmark.py  run_demo.py
client/: model_params.py  supported_models.yaml  unified_llm_client.py
config/: sample.yaml
config/4_ablation/generator/: actor_gpt-4o.yaml  actor_llama-3-70b.yaml  coa_gpt-4o.yaml  coa_llama-3-70b.yaml  crescendo_gpt-4o.yaml  fitd_gpt-4o.yaml  fitd_llama-3-70b.yaml  xteaming_gpt-4o.yaml  xteaming_llama-3-70b.yaml
config/4_ablation/judge/: actor_gpt-4o.yaml  actor_llama-3-70b.yaml  coa_gpt-4o.yaml  coa_llama-3-70b.yaml  crescendo_gpt-4o.yaml  crescendo_llama-3-70b.yaml  fitd_gpt-4o.yaml  fitd_llama-3-70b.yaml  xteaming_gpt-4o.yaml  xteaming_llama-3-70b.yaml
config/4_ablation/updater/: actor_gpt-4o.yaml  actor_llama-3-70b.yaml  coa_gpt-4o.yaml  coa_llama-3-70b.yaml  crescendo_llama-3-70b.yaml  fitd_gpt-4o.yaml  fitd_llama-3-70b.yaml
config/5_diversification/: crescendo_gpt-4o.yaml  crescendo_llama-3-70b.yaml  xteaming_gpt-4o.yaml  xteaming_llama-3-70b.yaml
config/6_recomposition/crescendo/: claude-haiku-4_5.yaml  claude-sonnet-4_5.yaml  deepseek-3_2.yaml  gemini-3-flash.yaml  gpt-4o.yaml  (+17 more)
data/: harmbench.py
docs/: attacks.md  developer_guide.md  unified_llm_client.md
engine/: attack_type.py  defense_type.py  jailbreak_engine.py
engine/core/: __init__.py  action.py  context.py  evaluation.py  outcome.py  turn.py
engine/utils/: independent_judge.py  parse_json.py
scripts/: clean.py  deploy_guard.sh  sim_server.py
scripts/nersc/: deploy_attacker.sh  deploy_target.sh  vllm.yaml
(+147 files in other folders)
